# siftopsv2

./: .gitignore  README.md
backend/: .env.example  pyproject.toml  railway.toml
backend/app/: __init__.py  main.py
backend/app/core/: auth.py  cache.py  config.py  security.py
backend/app/routes/: admin.py  chat.py  search.py
backend/app/services/: chat_service.py  db_service.py  vector_service.py  woocommerce_service.py
backend/app/services/rag/: __init__.py  image_search.py  reranker.py  retriever.py  validator.py
backend/data/: pullbear_catalog.json  sample_products.csv
backend/scripts/: ingest.py  seed_pullbear.py
catalog_crawler/: README.md  pyproject.toml
catalog_crawler/catalog_crawler/: __init__.py  __main__.py  cli.py  crawler.py
catalog_crawler/catalog_crawler/models/: __init__.py  product.py
catalog_crawler/catalog_crawler/parsers/: __init__.py  listing_parser.py  product_parser.py
catalog_crawler/tests/: __init__.py  test_models.py  test_parsers.py
catalog_crawler/tests/fixtures/: listing_page.html  product_page.html
demos/pullbear/: README.md
demos/pullbear/ui/: package-lock.json  package.json
frontend/: package-lock.json
frontend/src/app/: page.tsx
frontend/src/components/: ChatWidget.tsx  ProductCard.tsx
frontend/src/lib/: api.ts
scripts/: export_for_ui.py  extract_theme_tokens.py
supabase/: schema.sql
ui/: README.md
ui/src/app/: globals.css  layout.tsx  page.tsx
ui/src/components/: Footer.tsx  Header.tsx  ImageGallery.tsx  ProductCard.tsx  SearchModeToggle.tsx  index.ts
ui/theme/: tokens.json
(+37 files in other folders)
